--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.16",
     "@types/node": "^18.14.4",
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.35.0",
+    "jsdom": "^21.1.0",
+    "typescript": "^4.9.5",
     "unocss": "^0.50.3",
+    "unplugin-auto-import": "^0.15.0",
+    "unplugin-icons": "^0.15.3",
+    "unplugin-vue-components": "^0.24.0",
+    "unplugin-vue-macros": "^1.9.1",
     "vite": "^4.1.4"
   }
 }
