--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.18",
+    "@iconify-json/lucide": "^1.1.107",
     "@types/node": "^18.16.19",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.44.0",
     "jsdom": "^21.1.2",
+    "sass": "^1.63.6",
     "typescript": "^4.9.5",
     "unocss": "^0.50.8",
     "unplugin-auto-import": "^0.15.3",
