--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
+    "dayjs": "^1.11.9",
     "vue": "^3.3.4"
   },
   "devDependencies": {
