--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,34 +2,19 @@
   "compilerOptions": {
     "baseUrl": ".",
     "module": "ESNext",
-    "target": "es2016",
+    "target": "ESNext",
     "lib": ["DOM", "ESNext"],
     "strict": true,
-    "jsx": "preserve",
     "esModuleInterop": true,
+    "jsx": "preserve",
     "skipLibCheck": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "allowJs": true,
     "forceConsistentCasingInFileNames": true,
-    "types": [
-      "vite/client",
-      // "vite-plugin-pages/client",
-      // "unplugin-vue-macros/macros-global"
-      "./components.d.ts"
-    ],
+    "types": ["vite/client", "vite-plugin-pages/client", "./components.d.ts"],
     "paths": {
       "~/*": ["src/*"]
     }
   },
-  "vueCompilerOptions": {
-    "plugins": [
-      // "@vue-macros/volar/define-model",
-      // "@vue-macros/volar/define-slots"
-    ]
-  },
   "exclude": ["dist", "node_modules"]
-  // "include": ["components.d.ts"]
 }
